--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>콘텐츠/미디어 뉴스 모음</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: NanumGothic;
       max-width: 800px;
       margin: auto;
       padding: 20px;
@@ -35,14 +35,13 @@
   <div id="app"></div>
 
   <script>
-    // ✅ 한국 기준 날짜로 제목 출력
-    const kstDate = new Date().toLocaleString("ko-KR", {
-      timeZone: "Asia/Seoul"
-    });
-    const dateObj = new Date(kstDate);
-    const month = dateObj.getMonth() + 1;
-    const date = dateObj.getDate();
-    const weekday = dateObj.toLocaleDateString("ko-KR", {
+    // ✅ 정확한 한국 시간으로 날짜 생성
+    const nowUTC = new Date();
+    const nowKST = new Date(nowUTC.getTime() + 9 * 60 * 60 * 1000); // UTC + 9시간
+
+    const month = nowKST.getMonth() + 1;
+    const date = nowKST.getDate();
+    const weekday = nowKST.toLocaleDateString("ko-KR", {
       weekday: "short",
       timeZone: "Asia/Seoul"
     });
@@ -50,7 +49,7 @@
     const title = `${month}월 ${date}일 (${weekday}) 콘텐츠/미디어 뉴스 모음`;
     document.getElementById("page-title").innerText = title;
 
-    // ✅ 뉴스 불러오기
+    // ✅ 뉴스 JSON 불러와서 렌더링
     fetch("data/news.json")
       .then(res => res.json())
       .then(data => {
