--- a/website/index.html
+++ b/website/index.html
@@ -1,1 +1,8 @@
-<!-- index.html placeholder -->
+<!-- website/index.html -->
+<!DOCTYPE html>
+<html>
+  <head><title>News Feed</title></head>
+  <body>
+    <h1>📰 News Feed 페이지 준비 중</h1>
+  </body>
+</html>
